2004-05-16  Saito <saito@intaa.net>

	* configs/msc[67]-project.zip: Fix for FLAC/OggFLAC DLL.

2004-05-16  Daisuke Aoki <dai@sweetparty.ne.jp>

	* timidity/{flac_a.c,vorbis_a.c,w32_libFLAC_dll.c,w32_libFLAC_dll.h,
	  w32_libFLAC_dll_g.h,w32_libFLAC_dll_i.h,w32_libOggFLAC_dll.c,
	  w32_libOggFLAC_dll.h,w32_libOggFLAC_dll_g.h}:
	  Support for FLAC/OggFLAC DLL.

2004-05-16  skeishi <s_keishi@mutt.freemail.ne.jp>

	* interface/gogo_a.c: Support for MP3 GOGO output in Win32CUI interface.

2004-05-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configs/msc[67]-project.zip: Change version to "current"
	* timidity/Makefile.{am,in}: Add w32_{portaudio.h,portaudio_dll.c}

2004-05-14  Saito <saito@intaa.net>

	* configs/msc[67]-project.zip: Fix for PortAudio DLL.
	* timidity/w32g_pref.c: Fix typo.
	* timidity/mix.c: Fix around envelope.

2004-05-14  Daisuke Aoki <dai@sweetparty.ne.jp>

	* timidity/{output.c,portaudio_a.c,w32_portaudio.h,
	  w32_portaudio_dll.c}: Support for PortAudio DLL.

2004-05-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/tclIndex: Resume order

2003-05-05  Chisato Yamauchi <cyamauch@hst.phyas.aichi-edu.ac.jp>

	* TiMidity(-uj).ad.in, interface/xaw_i.c:
	  Update app-defaults file for XAW interface

2004-05-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/ncurs_c.c, interface/server_c.c, interface/slang_c.c,
	  interface/vt100_c.c, interface/w32g_{i,syn}.c, interface/xaw_i.c,
	  timidity/timidity.c: Fix to fit with case of "current" version

2004-05-02  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c (parse_opt_h): ditto.
	* timidity/timidity.h (DEFAULT_RESAMPLATION): ditto.
	* configure.in: --enable-spline was not working

2004-04-29  Saito <saito@intaa.net>

	* timidity/reverb.c, timidity/optcode.h: Fix around Insertion Effect.

2004-04-28  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c: Fix around temperament control

2004-04-27  TAMUKI Shoichi <tamuki@linet.gr.jp>
